Your commit message

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI= mongodb://127.0.0.1:27017/recipe
+MONGODB_URI= mongodb+srv://sterinjacob2003:T4KSCygxsv32dVQc@cluster0.dekdm.mongodb.net/recipedb
 PORT=3000
